# Envoy

./: .gitignore  README.md
server/: .env.example  Dockerfile  PHASE0.md  contracts.py  llm_client.py  pcc-deploy.toml  pipeline_factory.py  pyproject.toml  smoke_text.py
server/brain/: __init__.py  guardrails_seed.py  negotiate.py  parser.py
server/counterpart/: persona.py
server/dashboards/: README.md  server.py
server/dashboards/static/: index.html
server/data/: beat4_transcripts.json  eval_history.json  guardrails.json
server/envoy/: run_envoy.py
server/evals/: README.md
server/integrations/: calendar.py  gmail.py  google_auth.py
server/selfheal/: breach_discovery.py  breach_report.md  cekura_eval.py  cekura_eval_results.json  loop.py  monitor.py  naive_baseline.py  patcher.py  replay_demo.py
server/telephony/: place_call.py
