[project]
name = "yc-voice-agent-hackathon"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "openai>=2.38.0",
    "pipecat-ai[gradium,openai,runner,silero,webrtc,websocket]>=1.3.0",
    "pipecatcloud>=0.7.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
